--- a/hithesis.dtx
+++ b/hithesis.dtx
@@ -1590,7 +1590,7 @@ delim_1 "\\hspace*{\\fill}"
 % 威海校区特有的部分，开题中期加入了指导老师评语等
 % 现在只支持威海校区本科，但其实可以扩展到所有需要加入尾评的
 %    \begin{macrocode}
-\renewcommand\makecomment{%
+\newcommand\makecomment{%
   \ifhit@bachelor
   \ifhit@weihai
     \ifhit@kaiti   %页眉判断-开题
