--- a/hithesis.dtx
+++ b/hithesis.dtx
@@ -2595,7 +2595,7 @@ delim_1 "\\hspace*{\\fill}"
    \ifhit@weihai % 威海校区特有
    % 我也不懂为啥威海校区没有这个东西
    \else
-   \centerline{\heiti\textbf{哈尔滨工业大学教务处制}}
+   \centerline{\lishu\textbf{哈尔滨工业大学教务处制}}
    \fi
    \vspace{0.5\baselineskip}
 }
