Make a note at main.tex Fix the font problem, close #1

--- a/main.tex
+++ b/main.tex
@@ -33,7 +33,7 @@
 %  以后 的字体）或 windowsold（vista 以前）或者想用思源宋体并且是已经安装
 %  了思源宋体的任何系统，填写siyuan选项。缺省值为空，自动识别系统并匹配字体
 %  。模板版中给出的思源字体定义文件定义的思源字体的版本是Adobe版，其他字体
-%  是windowsnew字体。
+%  是windowsnew字体。更多字体问题可以查看文件夹中说明。
 % tocblank=true|false
 %  含义：目录中第一章之前，是否加一行空白。缺省值为true。
 % chapterhang=true|false
