--- a/hithesis.dtx
+++ b/hithesis.dtx
@@ -1935,7 +1935,7 @@ delim_1 "\\hspace*{\\fill}"
 \vskip\belowcaptionskip}
 %    \end{macrocode}
 %    \end{macro}
-%    \begin{macro}{\@makecaption}
+%    \begin{macro}{\LT@makecaption}
 %    有关longtable的caption支持
 %    \begin{macrocode}
 \long\def\LT@makecaption#1#2#3{%
